# silverbane

./: .gitignore  Makefile  README  README.md  TODO  expect-doctest.cabal  silverbane.cabal
app/: Main.hs
lib/: Assertion.hs  CheckAssertions.hs  DiffLibWrap.hs  ExpectTest.hs  Parse.hs  Pexpect.hs  ProcessUtils.hs  RegexReplace.hs  RunActions.hs  Silverbane.hs
test/: Main.hs  ParseTest.hs  PexpectTest.hs  TestExpectTest.hs  TestParse.hs  TestPexpect.hs  TestSilverbane.hs  TestUtils.hs  Utils.hs
testfiles/: echoscript.py  testscript.py
